versioned_docs/version-5.4.0/api/1_wrapper/getstoredprofileid.md
# GetStoredProfileId

Returns the stored profile ID

## Usage

```mdx-code-block
<BrowserWindow>
<Tabs>
<TabItem value="csharp" label="C#">
```

```csharp


string profileId = <%= data.branding.codePrefix %>.GetStoredProfileId();
```

```mdx-code-block
</TabItem>
<TabItem value="cpp" label="C++">
```

```cpp
std::string profileId = <%= data.branding.codePrefix %>->getStoredProfileId();
```

```mdx-code-block
</TabItem>
<TabItem value="objectivec" label="Objective-C">
```

```objectivec
NSString* profileId = [<%= data.branding.codePrefix %> getStoredProfileId];
```

```mdx-code-block
</TabItem>
<TabItem value="java" label="Java">
```

```java
String id = <%= data.branding.codePrefix %>.getStoredProfileId();
```

```mdx-code-block
</TabItem>
<TabItem value="js" label="JavaScript">
```

```javascript
var profileId = <%= data.branding.codePrefix %>.getStoredProfileId();
```

```mdx-code-block
</TabItem>
<TabItem value="dart" label="Dart">
```

```dart
String profileId = <%= data.branding.codePrefix %>.getStoredProfileId();
```

```mdx-code-block
</TabItem>
<TabItem value="cfs" label="Cloud Code">
```

```javascript
var profileId = <%= data.branding.codePrefix %>.getStoredProfileId();
```

```mdx-code-block
</TabItem>
<TabItem value="r" label="Raw">
```

```javascript
var profileId = <%= data.branding.codePrefix %>.getStoredProfileId();
```

```mdx-code-block
</TabItem>
</Tabs>
</BrowserWindow>
```

<details>
<summary>JSON Response</summary>

```javascript
var profileId = <%= data.branding.codePrefix %>.getStoredProfileId();
```
</details>

